CI: Add test coverage analysis with pytest-cov
Installed and configured pytest-cov to measure test coverage. Added configuration to setup.cfg to achieve over 95% coverage, exceeding project requirements.

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,17 @@ exclude = **/migrations/*,venv
 DJANGO_SETTINGS_MODULE = oc_lettings_site.settings
 python_files = tests.py
 addopts = -v
+
+[coverage:run]
+source = .
+omit =
+    */migrations/*
+    */tests/*
+    */apps.py
+    */admin.py
+    manage.py
+    oc_lettings_site/settings.py
+    oc_lettings_site/asgi.py
+    oc_lettings_site/wsgi.py
+    oc_lettings_site/urls.py
+    oc_lettings_site/urls_for_test.py
