--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,3 +73,16 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/oc-lettings-fr:${{ github.sha }}
+
+  # This job deploys the application to Render
+  deploy:
+    name: Deploy to Render
+    # This job depends on the success of the containerize job
+    needs: containerize
+    # This job only runs for pushes to the master branch
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Trigger Render Deploy Hook
+        run: curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK_URL }}"
