--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,9 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/oc-lettings-fr:${{ github.sha }}
+          tags: |
+            trissi/python-oc-lettings-fr:latest
+            trissi/python-oc-lettings-fr:${{ github.sha }}
 
   # This job deploys the application to Render
   deploy:
